--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,3 +6,5 @@ server.error.path: /error
 server.error.whitelabel.enabled: false
 
 spring.data.mongodb.uri: "mongodb+srv://${MONGO_USER}:${MONGO_PASS}@${MONGO_HOST}/${MONGO_DB}?appName=PartySheetShow"
+
+open5e.client.pagination: 200
