--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,15 @@
-spring.application.name: PartySheetShow
+%YAML 1.2
+---
 
 management.endpoints.web.exposure.include: mappings
 
-server.error.path: /error
-server.error.whitelabel.enabled: false
+server:
+  error.path: /error
+  error.whitelabel.enabled: false
 
-spring.data.mongodb.uri: "mongodb+srv://${MONGO_USER}:${MONGO_PASS}@${MONGO_HOST}/${MONGO_DB}?appName=PartySheetShow"
+spring:
+  application.name: PartySheetShow
+  data.mongodb.uri: "mongodb+srv://${MONGO_USER}:${MONGO_PASS}@${MONGO_HOST}/${MONGO_DB}?appName=PartySheetShow"
+  threads.virtual.enabled: true
 
 open5e.client.pagination: 200
