race traits parsing and prepared model to allow choosing, renamed attributes to abilities to reflect open5e naming, fixed characterSheet.html and characterAdd.html, added default gamesystem to properties, fixed access rules to not leak password, character mapping continued

--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -4,4 +4,7 @@
 spring:
   data.mongodb.database: test-db
 
-open5e.client.pagination: 200
+open5e.client:
+  pagination: 200
+  default-gamesystem: "5e-2014"
+  use-default-gamesystem: true
